--- a/ui/modifyDialog.ui
+++ b/ui/modifyDialog.ui
@@ -58,8 +58,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>616</width>
-        <height>556</height>
+        <width>610</width>
+        <height>550</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_18">
@@ -362,8 +362,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>582</width>
-                <height>258</height>
+                <width>355</width>
+                <height>122</height>
                </rect>
               </property>
               <attribute name="label">
@@ -692,8 +692,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>209</width>
-                <height>203</height>
+                <width>211</width>
+                <height>253</height>
                </rect>
               </property>
               <attribute name="label">
@@ -1974,8 +1974,8 @@ If you have no idea what these mean, leave them untouched !!</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>582</width>
-                <height>258</height>
+                <width>570</width>
+                <height>230</height>
                </rect>
               </property>
               <attribute name="label">
@@ -2361,7 +2361,7 @@ and copying devices via the --devices option.
                   <cursorShape>PointingHandCursor</cursorShape>
                  </property>
                  <property name="toolTip">
-                  <string>Try to backup open files in windows systems using vss (Only works on windows 2000 and upper)
+                  <string>Try to backup open files in windows systems using vss (Only works on windows 2003 and upper)
 (--vss)</string>
                  </property>
                  <property name="text">
@@ -2390,7 +2390,7 @@ and copying devices via the --devices option.
                   <cursorShape>PointingHandCursor</cursorShape>
                  </property>
                  <property name="toolTip">
-                  <string>Restore backed-up windows permissions localized in nt-streams 
+                  <string>Restore backed-up windows permissions which are located in the NTFS Security Descriptor Stream 
 (--restore-nt-streams)</string>
                  </property>
                  <property name="text">
@@ -2418,8 +2418,8 @@ and copying devices via the --devices option.
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>209</width>
-                <height>170</height>
+                <width>211</width>
+                <height>217</height>
                </rect>
               </property>
               <attribute name="label">
@@ -2667,8 +2667,8 @@ and copying devices via the --devices option.
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>582</width>
-                <height>258</height>
+                <width>243</width>
+                <height>269</height>
                </rect>
               </property>
               <attribute name="label">
@@ -2968,8 +2968,8 @@ ATTENTION: check this if you really know what you're doing</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>209</width>
-                <height>172</height>
+                <width>211</width>
+                <height>217</height>
                </rect>
               </property>
               <attribute name="label">
